[tool.poetry]
name = "we-care-renningen"
version = "0.0.1"
description = "Information about Renningen/Malmsheim"
authors = ["Nicole Finnie"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
git-changelog = ">=0.5.0"
mkdocs = ">=1.2.3"
mkdocs-git-revision-date-localized-plugin = ">=1.1.0"
mkdocs-material = ">=8.1.7"
pre-commit = ">=2.15.0"
mkdocs-glightbox = "^0.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"